Implement JSON protocol, v1
This version of the protocol should get us started.

The files will be what gets passed to/from the server.

--- a/README
+++ b/README
@@ -1,1 +1,13 @@
-BUTTS
+A task manager that works like a bugtracker
+
+frontend:
+NativeScript/Angular. And luck.
+
+Backend:
+Data transferred and stored via JSON.
+Flask server i guess?
+Authomatic for auth
+
+
+So far, no need to modularize the json. All the server does is pushing new json files.
+Oh, and validating. LOOOOOTS of validating.
